boulder/boulder/tests/compile_fail/function/add_types.bo
# Mismatched types
# u16
# u32
# (6:

fn add_heterogenous(a: u32, b: u16) {
    a + b;
}